# 151B_SP26_Competition

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  starter_code_cse151b_comp.ipynb  train_qlora_sft.py
.ipynb_checkpoints/: CLAUDE-checkpoint.md
data/: public.jsonl  test.jsonl  train.jsonl  train_part_1.jsonl  train_part_2.jsonl  train_part_3.jsonl  train_part_4.jsonl
experiments/parameter_sampling/docs/: README.md
experiments/prompt_engineering/configs/: config.yaml
experiments/prompt_engineering/configs/.ipynb_checkpoints/: config-checkpoint.yaml
experiments/prompt_engineering/configs/run/: cot_structured_only.yaml  cot_structured_sc_only.yaml  default.yaml  sc_diverse_paths_only.yaml  sc_terse_only.yaml  smoke.yaml
experiments/prompt_engineering/configs/run/.ipynb_checkpoints/: full_eval-checkpoint.yaml
experiments/prompt_engineering/docs/: writeup.md
experiments/prompt_engineering/docs/.ipynb_checkpoints/: README-checkpoint.md  writeup-checkpoint.md
experiments/prompt_engineering/src/: eval.py  private_submit.py  prompts.py
experiments/prompt_engineering/src/.ipynb_checkpoints/: eval-checkpoint.py  prompts-checkpoint.py
experiments/reinforcement_learning/configs/: config.yaml  eval_config.yaml
experiments/reinforcement_learning/configs/grpo/: demo.yaml  smoke.yaml
experiments/reinforcement_learning/configs/lora/: r16a32.yaml
experiments/reinforcement_learning/configs/model/: default.yaml
experiments/reinforcement_learning/docs/: README.md  writeup.md
experiments/reinforcement_learning/src/: eval.py  grpo_train_eval.ipynb  reward.py  train_grpo.py
experiments/supervised_fine_tuning/docs/: README.md  mixed_27k_quick_commands.md  run_commands.md
experiments/supervised_fine_tuning/src/: __init__.py  prepare_mixed_sft.py  prepare_numina_sft.py
notebooks/: colab_baseline_cot_structured_16384_vllm.ipynb  colab_baseline_cot_structured_32768_vllm.ipynb  colab_baseline_cot_structured_sc_high_div_8.ipynb  colab_hf_lora_eval.ipynb  colab_sft_public_teacher_traces.ipynb  local_hf_lora_cot_structured_16k_eval.ipynb  local_hf_lora_cot_structured_eval.ipynb  local_hf_lora_cot_structured_sc_eval.ipynb  local_hf_lora_eval.ipynb  local_hf_lora_sc_diverse_paths_eval.ipynb
shared/: data.py  io.py  multi_turn.py  prompt_format.py  prompts.py  runner.py  schemas.py  scoring.py  telemetry.py  voting.py
shared/.ipynb_checkpoints/: io-checkpoint.py  multi_turn-checkpoint.py  prompts-checkpoint.py  runner-checkpoint.py  schemas-checkpoint.py  scoring-checkpoint.py  voting-checkpoint.py
shared/configs/eval/: full.yaml  smoke.yaml  standard.yaml
shared/configs/regime/: default_sampling.yaml  greedy.yaml  high_div_8.yaml
shared/configs/runner/: default.yaml  hf_bnb.yaml
