[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cse151b-sp26-competition"
version = "0.1.0"
description = "CSE 151B Spring 2026 math reasoning competition: Qwen3-4B-Thinking on MCQ + free-form math."
requires-python = ">=3.10"
dependencies = [
    # Scoring / judger. sympy >=1.13 uses lark (not antlr) for parse_latex; if you
    # pin sympy <1.13 you must additionally install antlr4-python3-runtime==4.11.1
    # AFTER hydra-core (which constrains it to 4.9.*) — hydra never actually uses
    # antlr at runtime, so the runtime conflict is benign even though pip refuses
    # to resolve it at install time.
    "sympy>=1.13",
    "numpy",
    # Inference
    # transformers <5.0: 5.x removed `Qwen2Tokenizer.all_special_tokens_extended`,
    # which vLLM's tokenizer cache still calls (breaks Qwen3 load).
    # vllm <0.11: 0.11+ wheels link libcudart.so.13 (CUDA 13); Colab ships CUDA 12.x.
    "transformers>=4.51,<5.0",
    "bitsandbytes",
    "torch",
    # torchao >=0.15: Colab preinstalls a stale torchao 0.10.0 that lacks the
    # config-class quant API (renamed from the old function API in 0.15) and trips
    # runtime version gates. Capped <0.16 because 0.16+ drops torch 2.7.1 support
    # (which vllm 0.10 pins) and only integrates with transformers 5.0 / vllm 0.13.
    # 0.15.x covers torch 2.7.1/2.8.0/2.9.1 — the whole range these pins allow.
    "torchao>=0.15,<0.16",
    "vllm>=0.10,<0.11",
    "flashinfer-python",
    # Config + training infra
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "lightning>=2.2",
    "datasets",
    "accelerate",
    "peft",
    "pyyaml",
    "wandb",
    # Utilities
    "tqdm",
]

[project.optional-dependencies]
notebook = ["ipykernel", "jupyter"]
# GRPO RL track. trl >=0.17 guarantees GRPOConfig.vllm_mode (colocate/server split);
# <0.20 caps API churn. Compatible with the transformers 4.x / vllm 0.10 pins above.
rl = ["trl>=0.17,<0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "experiments*"]
exclude = ["data*", "results*", "tests*"]
